--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -7,3 +7,9 @@
 .Products-title{
     text-align: center;
 }
+
+@media only screen and (max-width:576px){
+    .product-container{
+    grid-template-columns: repeat(1, 1fr);
+    }
+}
