--- a/src/components/Home/Home/Expart/Expart.css
+++ b/src/components/Home/Home/Expart/Expart.css
@@ -1,5 +1,14 @@
-.card-container{
+.expart-container{
     display:grid;
     grid-template-columns: repeat(3,1fr);
     grid: gap 20px;
+
+
+
+    border:1px solid darkgray;
+    border-radius: 10px;
+    margin: 5px;
+    padding: 10px;
+    padding-bottom: 10px;
+    text-align: center;
 }
